--- a/alternative_clustering.Rmd
+++ b/alternative_clustering.Rmd
@@ -18,6 +18,7 @@ library(tidyverse)
 library(fst)
 source(here("UtilityFunctions.R"))
 source(here("MEP_UtilityFunctions.R"))
+source(here("figure_styling.R"))
 library(ggpubr)
 library(rstatix)
 library(ComplexHeatmap)
@@ -36,22 +37,33 @@ set.seed(123)
 ```{r}
 clinical_data <- getClinical()
 
+originalDensity_features <- getCellProportionsPerImage()%>% filter(isTumour == T) %>% dplyr::select(-c(isTumour))
+colnames(originalDensity_features) <- gsub("_CPh", "", colnames(originalDensity_features))
+colnames(originalDensity_features) <- gsub("[^A-Za-z0-9+\\-]", "", colnames(originalDensity_features))
+colnames(originalDensity_features) <- paste0(colnames(originalDensity_features), '_originalType')
 density_features <- getCellProportionsPerImageAlternative()%>% filter(isTumour == T) %>% dplyr::select(-c(isTumour))
+isTumourImages <- density_features$ImageNumber
 shape_features <- getShapeFeaturesAlternative() %>% filter(tnumber %in% density_features$ImageNumber)
+colnames(shape_features) <- paste('shape', colnames(shape_features), sep='_')
 scale_features <- getScaleFeaturesAlternative() %>% filter(tnumber %in% density_features$ImageNumber)
-shape_features <- generate_matrix(shape_features,'tnumber')
-scale_features <- generate_matrix(scale_features,'tnumber')
+colnames(scale_features) <- paste('scale', colnames(scale_features), sep='_')
+shape_features <- generate_matrix(shape_features,'shape_tnumber')
+scale_features <- generate_matrix(scale_features,'scale_tnumber')
 density_features <- generate_matrix(density_features,'ImageNumber') %>%  rename_at(.vars = vars(ends_with("_CPh")), .funs = funs(sub("[_]CPh$", "", .)))
+originalDensity_features <- generate_matrix(originalDensity_features, 'ImageNumber_originalType')
+
+all_features <- merge(shape_features, scale_features, by='row.names')
+all_features <- merge(all_features, density_features, by.x='Row.names', by.y='row.names')
+all_features <- merge(all_features, originalDensity_features, by.x='Row.names', by.y='row.names')
+rownames(all_features) <- all_features$Row.names
+all_features <- all_features %>% dplyr::select(-c('Row.names'))
+
+significant_features <- readRDS(here('scratch/significantFeatures.rds'))
 
 # rownames(density_features) <- density_features$ImageNumber
 # density_features <- as.data.frame(density_features %>% dplyr::select(-c(ImageNumber)) %>% 
   # rename_at(.vars = vars(ends_with("_CPh")),
   #           .funs = funs(sub("[_]CPh$", "", .))) )
-
-estimationCounts <- readRDS(here('scratch/estimationCountsAlternative.rds'))
-coefList_all_withoutCombi <- readRDS(here('scratch/coefficientsWithoutCombis.rds'))
-coefList_all_withCombis <- readRDS(here('scratch/coefficientsWithCombis.rds'))
-
 ```
 
 ```{r}
@@ -102,26 +114,7 @@ kmeans_clustering <- function(subtype,density_features,distance_features,cluster
   
 }
 
-hierarchical_clustering <- function(subtype,density_selection,distance_selection,cluster_n, name){
-  density_df <- density_features %>% dplyr::select(all_of(density_selection)) %>% rename_at(.vars = vars(ends_with("_CPh")), .funs = funs(sub("[_]CPh$", "", .)))
-
-    if (length(distance_selection) > 0){
-    shape_df <- shape_features %>% dplyr::select(dplyr::all_of(distance_selection))%>% rename_with( ~ paste0("shape_", .x))
-    scale_df <- scale_features %>% dplyr::select(dplyr::all_of(distance_selection)) %>% rename_with( ~ paste0("scale_", .x))
-    dist_df <- cbind(shape_df, scale_df)
-  
-    df <- merge(density_df, dist_df , by='row.names') %>% mutate(Row.names = as.numeric(Row.names))
-    
-    df <- df %>% filter(Row.names %in% (clinical_data %>% filter(PAM50 ==  subtype | ER_HER2_status == subtype) %>% pull(ImageNumber) ))
-
-    df <- df %>% dplyr::select(-c('Row.names'))
-  }else{
-    df <- density_df
-    df <- df %>% filter(row.names(df) %in% (clinical_data %>% filter(PAM50 ==  subtype | ER_HER2_status == subtype) %>% pull(ImageNumber) ))
-  }
-  
-
-  
+hierarchical_clustering <- function(df, subtype,cluster_n, name){
   dist_mat <- dist(df, method = 'euclidean')
   hclust_avg <- hclust(dist_mat, method = 'ward.D2')
 
@@ -133,8 +126,9 @@ hierarchical_clustering <- function(subtype,density_selection,distance_selection
   
   # df <- df[, colMeans(df == 0) <= 0.5] #Do we include all features or only the feature in a significant part of the population?
 
-  p <- Heatmap(name = subtype, t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=4), column_split = cut_avg)
-  save_pdf(p, paste(here('output/Alternative_clustering/'), gsub('+','plus',subtype,fixed=T),name, 'HCClustersHM.pdf',sep=''))
+  colnames(df) <- gsub('_originalType', '', colnames(df))
+  p <- Heatmap(name = subtype, t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=8), column_split = cut_avg, col = heatmapColorScale(-4,4))
+  save_pdf(p, paste(here('output/Method_comparison/heatmaps/'), paste(gsub('+','plus',subtype,fixed=T),t,sep='_'), 'HCHM.pdf',sep=''))
   
   return(cut_avg)
 }
@@ -146,239 +140,252 @@ hierarchical_clustering <- function(subtype,density_selection,distance_selection
 Patients of clinical subtypes show large heterogeneity in distance and density features. We aim to split these subtypes further to identify subpopulations.
 
 ```{r}
-getSelection <- function(subtype){
-    density_selection <- coefList_all_withoutCombi %>% filter(response == subtype) %>% filter(predictor == 'TME_proportion' | predictor == 'tumour_proportion') %>% pull(var)
-    distance_selection <- coefList_all_withoutCombi %>% filter(response == subtype) %>% filter(predictor == 'shape' | predictor == 'scale') %>% pull(var)
-    distance_selection <- gsub('scale_', '', distance_selection, fixed=T)
-    distance_selection <- gsub('shape_', '', distance_selection, fixed = T)
-    distance_selection <- unique(distance_selection)
-    
-    return(list(density = density_selection, distance = distance_selection))
-}
+getFeatures <- function(subtype,type){
+  subset <- apply(significant_features[,2:ncol(significant_features)], 1, function(x)which(x>0))
+  type_subset <- names(subset[[subtype]])
+  originalDensity_features <- grep('_originalType', type_subset, fixed = T, value = T)
+  # originalDensity_features <- gsub("[^A-Za-z0-9+\\-\\_\\]", "", originalDensity_features)
 
-getSelectionCombination <- function(subtype){
-  selection <- coefList_all_withCombis %>% filter(response == subtype) %>% pull(var)
-  
-  distance_features <- c(grep('shape_', selection, value=T, fixed =T),grep('scale_', selection, value=T, fixed =T))
-  distance_selection1 <- gsub('scale_', '', grep('scale_', selection, value=T, fixed =T), fixed=T)
-  distance_selection2 <- gsub('shape_', '', grep('shape_', selection, value=T, fixed =T), fixed = T)
-  distance_selection <- unique(c(distance_selection1, distance_selection2))
-  
-  density_selection <- setdiff(selection,distance_features)
-
-    return(list(density = density_selection, distance = distance_selection))
-}
-
-getSelectionUnivariate <- function(subtype){
-    density_selection <- univariateFeatureImportance %>% filter(Sig == T) %>% filter(response == subtype) %>% filter(featureSet == 'densities') %>% pull(Feature)
-    distance_selection <- univariateFeatureImportance %>% filter(Sig == T) %>% filter(response == subtype) %>% filter(featureSet == 'shape' | featureSet == 'scale') %>% pull(Feature)
-    density_selection <- gsub('_CPh', '', density_selection, fixed=T)
-    # distance_selection <- gsub('scale_', '', distance_selection, fixed=T)
-    # distance_selection <- gsub('shape_', '', distance_selection, fixed = T)
-    distance_selection <- unique(distance_selection)
-    
-    return(list(density = density_selection, distance = distance_selection))
+  distance_features <- c(grep('shape', type_subset, fixed = T, value = T),grep('scale', type_subset, fixed = T, value = T) )
+  density_features <- setdiff(type_subset, c(originalDensity_features,distance_features))
   
   
-}
-
-consensus_test <- function(selections, subtype){
-  density_selection <- selections$density
-  distance_selection <- selections$distance
-  
-  print(length(density_selection))
-  print(length(distance_selection))
-
-  density_df <- density_features %>% dplyr::select(dplyr::all_of(density_selection))
-  if (length(distance_selection) > 0){
-    shape_df <- shape_features %>% dplyr::select(dplyr::all_of(distance_selection))%>% rename_with( ~ paste0("shape_", .x))
-    scale_df <- scale_features %>% dplyr::select(dplyr::all_of(distance_selection)) %>% rename_with( ~ paste0("scale_", .x))
-    dist_df <- cbind(shape_df, scale_df)
-  
-    df <- merge(density_df, dist_df , by='row.names') %>% mutate(Row.names = as.numeric(Row.names))
-    
-    df <- df %>% filter(Row.names %in% (clinical_data %>% filter(PAM50 ==  subtype | ER_HER2_status == subtype) %>% pull(ImageNumber) ))
-
-    df <- df %>% dplyr::select(-c('Row.names'))
-  }else{
-    df <- density_df
-    df <- df %>% filter(row.names(df) %in% (clinical_data %>% filter(PAM50 ==  subtype | ER_HER2_status == subtype) %>% pull(ImageNumber) ))
+  if (type == 'originalDensity'){
+    return(originalDensity_features)
+  }
+  if (type == 'density'){
+    return(density_features)
   }
   
-  print(nrow(df))
+  if (type == 'distance'){
+    return(distance_features)
+  }
+  else{
+      return(NULL)
+  }
   
+}
+
+
+consensus_test <- function(df){
   test <- M3C(data.frame(t(df)))
-  
-  return(df)
-}
-
-```
-```{r}
-for (s in setdiff(unique(clinical_data %>% pull(ER_HER2_status)), NA)){
-  print(s)
-  consensus_test(getSelection(s),s)
-}
-```
-
-```{r}
-optimal_cluster <- c(4,2,10,6)
-subtype_list <- setdiff(unique(clinical_data %>% pull(ER_HER2_status)), c(NA))
-
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelection(subtype_list[[s]])$density, getSelection(subtype_list[[s]])$distance,optimal_cluster[[s]],'')
-
-}
-```
-
-
-
-
-```{r}
-for (s in setdiff(unique(clinical_data %>% pull(PAM50)), c(NA))){
-  print(s)
-  consensus_test(getSelection(s),s)
-}
-```
-
-
-
-```{r}
-optimal_cluster <- c(2,5,7,3,5)
-subtype_list <- setdiff(unique(clinical_data %>% pull(PAM50)), NA)
-
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelection(subtype_list[[s]])$density, getSelection(subtype_list[[s]])$distance,optimal_cluster[[s]],'')
-
-}
-
-```
-## Combination features
-Use features selected by model trained on combination feature set.
-```{r}
-for (s in setdiff(unique(clinical_data %>% pull(ER_HER2_status)), c(NA, 'ER-HER2-'))){
-  print(s)
-  consensus_test(getSelectionCombination(s),s)
-}
-```
-
-```{r}
-optimal_cluster <- c(2,5,2)
-subtype_list <- setdiff(unique(clinical_data %>% pull(ER_HER2_status)), c(NA, 'ER-HER2-'))
-
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelectionCombination(subtype_list[[s]])$density, getSelectionCombination(subtype_list[[s]])$distance,optimal_cluster[[s]],'combination')
-
-}
-```
-
-```{r}
-for (s in setdiff(unique(clinical_data %>% pull(PAM50)), c(NA, 'Normal-like'))){
-  print(s)
-  consensus_test(getSelectionCombination(s),s)
-}
-```
-
-```{r}
-optimal_cluster <- c(3,4,2,2)
-subtype_list <- setdiff(unique(clinical_data %>% pull(PAM50)),  c(NA, 'Normal-like'))
-
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelectionCombination(subtype_list[[s]])$density, getSelectionCombination(subtype_list[[s]])$distance,optimal_cluster[[s]], 'combination')
-
+  return(test)
 }
 
 ```
 
-
-
-## Univariate feature selection
-Repeat the experiment but now what features selected by univariate feature selection.
+Plot original density, density and distance separately.
 
 ```{r}
-for (s in setdiff(unique(clinical_data %>% pull(ER_HER2_status)), NA)){
-  print(s)
-  consensus_test(getSelectionUnivariate(s), s)
-}
-```
-```{r}
-optimal_cluster <- c(6,5,3,4)
+
 subtype_list <- setdiff(unique(clinical_data %>% pull(ER_HER2_status)), NA)
+optimal_cluster <- c(1,1,1,1)
 
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelectionUnivariate(subtype_list[[s]])$density, getSelectionUnivariate(subtype_list[[s]])$distance,optimal_cluster[[s]], 'Univariate')
-
+for (t in c('originalDensity','density','distance')){
+  for (s in 1:length(subtype_list)){
+    df <- all_features %>% dplyr::select(getFeatures(subtype_list[[s]], t))
+    df <- df %>% filter(row.names(df) %in% (clinical_data %>% filter(PAM50 == subtype_list[[s]]  | ER_HER2_status == subtype_list[[s]]) %>% pull(ImageNumber) ))
+    print(ncol(df))
+    print(nrow(df))
+    
+    hierarchical_clustering(df, subtype_list[[s]], optimal_cluster[[s]], paste(subtype_list[[s]],t))
+    
+  }
+  
 }
-```
 
-```{r}
-for (s in setdiff(unique(clinical_data %>% pull(PAM50)), c(NA))){
-  print(s)
-  consensus_test(getSelectionUnivariate(s),s)
-}
-```
-
-```{r}
-optimal_cluster <- c(3,5,4,3,5)
 subtype_list <- setdiff(unique(clinical_data %>% pull(PAM50)), NA)
+optimal_cluster <- c(1,1,1,4,1)
 
-for (s in seq_along(subtype_list)){
-  print(subtype_list[[s]])
-  hierarchical_clustering(subtype_list[[s]], getSelectionUnivariate(subtype_list[[s]])$density, getSelectionUnivariate(subtype_list[[s]])$distance,optimal_cluster[[s]], 'Univariate')
 
+for (t in c('distance')){
+  for (s in 4){
+    df <- all_features %>% dplyr::select(getFeatures(subtype_list[[s]], t))
+    df <- df %>% filter(row.names(df) %in% (clinical_data %>% filter(PAM50 == subtype_list[[s]]  | ER_HER2_status == subtype_list[[s]]) %>% pull(ImageNumber) ))
+    print(ncol(df))
+    print(nrow(df))
+    
+    # (consensus_test(df))
+    
+    hierarchical_clustering(df, subtype_list[[s]], optimal_cluster[[s]], paste(subtype_list[[s]],t))
+    
+  }
+  
 }
+
 ```
+
 
 ## Cohort-wide clustering
 
-Filter samples and features
+Show all density features
+
 ```{r}
-x <- 20
-distance_selection <- row.names(estimationCounts %>% filter(rank_percentage < x))
-density_selection <- setdiff(colnames(density_features), c('CD57+_cells'))
+
+distance_names <- grep('shape|scale', colnames(all_features), value = T)
+originalDensity_names <- grep('originalType', colnames(all_features),fixed=T, value = T)
+density_names <- setdiff(colnames(all_features), c(distance_names, originalDensity_names))
+
+df <- all_features %>% dplyr::select(c(originalDensity_names))
+annotations <- merge(tibble(row_names = rownames(df)), clinical_data %>% dplyr::select(c(ImageNumber, PAM50, ER_HER2_status)), by.x='row_names', by.y='ImageNumber', all.x=T)
+oneHotPAM <- reshape2::dcast(data = annotations, row_names ~ PAM50, length)
+oneHotMS <- reshape2::dcast(data = annotations, row_names ~ ER_HER2_status, length)
+
+# consensus_test(df)
 
 ```
 
-```{r}
-density_df <- density_features %>% dplyr::select(dplyr::all_of(density_selection))
-shape_df <- shape_features %>% dplyr::select(dplyr::all_of(distance_selection))%>% rename_with( ~ paste0("shape_", .x))
-scale_df <- scale_features %>% dplyr::select(dplyr::all_of(distance_selection)) %>% rename_with( ~ paste0("scale_", .x))
-dist_df <- cbind(shape_df, scale_df)
-
-df <- merge(density_df, dist_df , by='row.names') %>% mutate(Row.names = as.numeric(Row.names))
-
-annotations <- merge(tibble(row_names = df %>% pull('Row.names')),clinical_data %>% select(c(ImageNumber, PAM50, ER_HER2_status)), by.x='row_names', by.y='ImageNumber', all.x=T)
-
-df <- df %>% dplyr::select(-c('Row.names'))
-
-# test <- M3C(data.frame(t(df)))
-
-```
 
 ```{r}
-library("scales") 
+optimal_cluster <- c(10)
 
-cluster_n <- 10
+colorPanel = carto_pal(9, "Safe")
+
+column_ha = HeatmapAnnotation(pam50 = annotations %>% pull(PAM50), ER_HER2 = annotations %>% pull(ER_HER2_status),col = list(pam = c('Basal' = carto_pal(5, "Safe")[[1]] ,'HER2' = carto_pal(5, "Safe")[[2]],'Luminal A' =carto_pal(5, "Safe")[[3]],'Luminal B' = carto_pal(5, "Safe")[[4]],'Normal-like' = carto_pal(5, "Safe")[[5]]), ER_HER2 = c('ER-HER2-' = carto_pal(4, "Safe")[[1]],'ER-HER2+' = carto_pal(4, "Safe")[[2]],'ER+HER2-' = carto_pal(4, "Safe")[[3]],'ER+HER2+' = carto_pal(4, "Safe")[[4]])))
+
+column_ha = HeatmapAnnotation(Basal = oneHotPAM %>% pull(Basal), HER2 = oneHotPAM %>% pull(HER2), LumA = oneHotPAM %>% pull(`Luminal A`),LumB = oneHotPAM %>% pull(`Luminal B`),Normal = oneHotPAM %>% pull(`Normal-like`), 
+                              col = list(Basal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         HER2 = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumA = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumB = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         Normal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]])))
+
 
 dist_mat <- dist(df, method = 'euclidean')
 hclust_avg <- hclust(dist_mat, method = 'ward.D2')
 
-cut_avg <- cutree(hclust_avg, k = cluster_n)
+cut_avg <- cutree(hclust_avg, k = optimal_cluster[[1]])
 
 avg_dend_obj <- as.dendrogram(hclust_avg)
-avg_col_dend <- color_branches(avg_dend_obj, k = cluster_n)
+avg_col_dend <- color_branches(avg_dend_obj, k = optimal_cluster[[1]])
 plot(avg_col_dend)
 
-column_ha = HeatmapAnnotation(pam50 = annotations %>% pull(PAM50), ER_HER2 = annotations %>% pull(ER_HER2_status),col = list(pam = c('Basal' = hue_pal()(9)[[1]] ,'HER2' = hue_pal()(9)[[2]],'Luminal A' =hue_pal()(9)[[3]],'Luminal B' = hue_pal()(9)[[4]],'Normal-like' = hue_pal()(9)[[5]]), ER_HER2 = c('ER-HER2-' = hue_pal()(9)[[6]],'ER-HER2+' = hue_pal()(9)[[7]],'ER+HER2-' = hue_pal()(9)[[8]],'ER+HER2+' = hue_pal()(9)[[9]])))
+colnames(df) <- gsub('_originalType', '', colnames(df), fixed=T)
 
-# df <- df[, colMeans(df == 0) <= 0.5] #Do we include all features or only the feature in a significant part of the population?
+p <- Heatmap(name = 'ALL', t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=8), column_split = cut_avg, top_annotation = column_ha, col=heatmapColorScale(-4,4))
+save_pdf(p, here('output/Alternative_clustering/orginalDensity_ALLHM.pdf'),width=12,height=8)
 
-p <- Heatmap(name = 'ALL', t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=4), column_split = cut_avg, top_annotation = column_ha)
-save_pdf(p, here('output/Alternative_clustering/ALLHM.pdf'),width=12,height=8)
 
 ```
+
+
+```{r}
+df <- all_features %>% dplyr::select(c(density_names))
+annotations <- merge(tibble(row_names = rownames(df)), clinical_data %>% dplyr::select(c(ImageNumber, PAM50, ER_HER2_status)), by.x='row_names', by.y='ImageNumber', all.x=T)
+oneHotPAM <- reshape2::dcast(data = annotations, row_names ~ PAM50, length)
+oneHotMS <- reshape2::dcast(data = annotations, row_names ~ ER_HER2_status, length)
+
+# consensus_test(df)
+
+```
+
+
+```{r}
+optimal_cluster <- c(10)
+
+colorPanel = carto_pal(9, "Safe")
+
+column_ha = HeatmapAnnotation(pam50 = annotations %>% pull(PAM50), ER_HER2 = annotations %>% pull(ER_HER2_status),col = list(pam = c('Basal' = carto_pal(5, "Safe")[[1]] ,'HER2' = carto_pal(5, "Safe")[[2]],'Luminal A' =carto_pal(5, "Safe")[[3]],'Luminal B' = carto_pal(5, "Safe")[[4]],'Normal-like' = carto_pal(5, "Safe")[[5]]), ER_HER2 = c('ER-HER2-' = carto_pal(4, "Safe")[[1]],'ER-HER2+' = carto_pal(4, "Safe")[[2]],'ER+HER2-' = carto_pal(4, "Safe")[[3]],'ER+HER2+' = carto_pal(4, "Safe")[[4]])))
+
+column_ha = HeatmapAnnotation(Basal = oneHotPAM %>% pull(Basal), HER2 = oneHotPAM %>% pull(HER2), LumA = oneHotPAM %>% pull(`Luminal A`),LumB = oneHotPAM %>% pull(`Luminal B`),Normal = oneHotPAM %>% pull(`Normal-like`), 
+                              col = list(Basal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         HER2 = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumA = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumB = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         Normal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]])))
+
+
+dist_mat <- dist(df, method = 'euclidean')
+hclust_avg <- hclust(dist_mat, method = 'ward.D2')
+
+cut_avg <- cutree(hclust_avg, k = optimal_cluster[[1]])
+
+avg_dend_obj <- as.dendrogram(hclust_avg)
+avg_col_dend <- color_branches(avg_dend_obj, k = optimal_cluster[[1]])
+plot(avg_col_dend)
+
+colnames(df) <- gsub('_originalType', '', colnames(df), fixed=T)
+
+p <- Heatmap(name = 'ALL', t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=10), column_split = cut_avg, top_annotation = column_ha, col=heatmapColorScale(-4,4))
+save_pdf(p, here('output/Alternative_clustering/density_ALLHM.pdf'),width=12,height=8)
+
+
+```
+
+
+Select features with most variance among samples.
+
+```{r}
+shape_features <- getShapeFeaturesAlternative() %>% filter(tnumber %in% isTumourImages)
+
+na_count <-sapply(shape_features, function(y) sum(length(which(is.na(y)))))
+
+na_count <- data.frame(na_count)
+na_count$feature <- row.names(na_count)
+na_count <- na_count %>% arrange(desc(na_count)) %>% tibble::rowid_to_column("rank") %>% mutate(percentage = (100*as.numeric(rank)/225))
+
+feature_selection <- na_count %>% filter(percentage > 80) %>% pull(feature)
+
+shape_features <- getShapeFeaturesAlternative() %>% filter(tnumber %in% isTumourImages) %>% dplyr::select(c(feature_selection))
+colnames(shape_features) <- paste('shape', colnames(shape_features), sep='_')
+scale_features <- getScaleFeaturesAlternative() %>% filter(tnumber %in% isTumourImages) %>% dplyr::select(c(feature_selection))
+colnames(scale_features) <- paste('scale', colnames(scale_features), sep='_')
+
+shape_features <- generate_matrix(shape_features,'shape_tnumber')
+scale_features <- generate_matrix(scale_features,'scale_tnumber')
+
+df <- merge(shape_features, scale_features, by='row.names') %>% dplyr::select(-c('Row.names'))
+
+annotations <- merge(tibble(row_names = rownames(df)), clinical_data %>% dplyr::select(c(ImageNumber, PAM50, ER_HER2_status)), by.x='row_names', by.y='ImageNumber', all.x=T)
+oneHotPAM <- reshape2::dcast(data = annotations, row_names ~ PAM50, length)
+oneHotMS <- reshape2::dcast(data = annotations, row_names ~ ER_HER2_status, length)
+
+# consensus_test(df)
+
+```
+
+```{r}
+optimal_cluster <- c(10)
+
+column_ha = HeatmapAnnotation(pam50 = annotations %>% pull(PAM50), ER_HER2 = annotations %>% pull(ER_HER2_status),col = list(pam = c('Basal' = carto_pal(5, "Safe")[[1]] ,'HER2' = carto_pal(5, "Safe")[[2]],'Luminal A' =carto_pal(5, "Safe")[[3]],'Luminal B' = carto_pal(5, "Safe")[[4]],'Normal-like' = carto_pal(5, "Safe")[[5]]), ER_HER2 = c('ER-HER2-' = carto_pal(4, "Safe")[[1]],'ER-HER2+' = carto_pal(4, "Safe")[[2]],'ER+HER2-' = carto_pal(4, "Safe")[[3]],'ER+HER2+' = carto_pal(4, "Safe")[[4]])))
+
+column_ha = HeatmapAnnotation(Basal = oneHotPAM %>% pull(Basal), HER2 = oneHotPAM %>% pull(HER2), LumA = oneHotPAM %>% pull(`Luminal A`),LumB = oneHotPAM %>% pull(`Luminal B`),Normal = oneHotPAM %>% pull(`Normal-like`), 
+                              col = list(Basal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         HER2 = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumA = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         LumB = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]] ),
+                                         Normal = c('1' = carto_pal(2, 'Safe')[[1]],'0' = carto_pal(2, 'Safe')[[2]])))
+
+
+dist_mat <- dist(df, method = 'euclidean')
+hclust_avg <- hclust(dist_mat, method = 'ward.D2')
+
+cut_avg <- cutree(hclust_avg, k = optimal_cluster[[1]])
+clusters <- tibble(ImageNumber = rownames(df), cluster = cut_avg)
+saveRDS(clusters, here('scratch/alternativeClusters.rds'))
+
+avg_dend_obj <- as.dendrogram(hclust_avg)
+avg_col_dend <- color_branches(avg_dend_obj, k = optimal_cluster[[1]])
+plot(avg_col_dend)
+
+p <- Heatmap(name = 'ALL', t(as.matrix(df)), cluster_columns = T,cluster_rows=T, column_names_gp = gpar(fontsize=2), row_names_gp = gpar(fontsize=4), column_split = cut_avg, top_annotation = column_ha, col=heatmapColorScale(-4,4))
+save_pdf(p, here('output/Alternative_clustering/distance_ALLHM.pdf'),width=12,height=8)
+
+```
+
+```{r}
+allParameters <- getALLParametersAlternative()
+cluster1 <- clusters %>% filter(cluster == 1) %>% pull(ImageNumber)
+allParameters <- merge(allParameters, clusters, by.x='tnumber', by.y='ImageNumber')
+
+ggplot() +
+  geom_point(data = allParameters, aes(x=shape, y=scale), alpha=0.1, size=0.5) + facet_wrap(~cluster,ncol = 5) +
+  theme_bw() +
+  ylim(10,300) + xlim(0,6) +
+  scale_y_log10() +
+  xlab('Shape') + ylab('Scale')
+
+ggsave(here('output/Alternative_clustering/Clusters_parameterSpaces.png'),width = 15,height=6)
+```
+
 
