--- a/distance_method_results.Rmd
+++ b/distance_method_results.Rmd
@@ -42,6 +42,8 @@ library(circlize)
 library(dplyr)
 library(ggsignif)
 library(ggpubr)
+source(here('figure_styling.R'))
+library(latex2exp)
 
 projectSeed <- 89230689
 set.seed(projectSeed)
@@ -158,7 +160,7 @@ results <- results %>% mutate(experiment = 'alternative_classification')
 results <- rbind(results, results_original)
 results_melted <- reshape2::melt(results) 
 
-g1 <- ggplot() +geom_bar(data = results_melted %>% filter(experiment == 'original_experiment'), aes(x=factor(category, level=c('all', 'existing', '20to5', '20to20')), y=value, fill=variable),stat="itdentity", position='fill')+ scale_y_continuous(labels = scales::percent_format()) + xlab('') + ylab('') + ggtitle('Original classification') + theme_bw() + theme(legend.position = "none")
+g1 <- ggplot() +geom_bar(data = results_melted %>% filter(experiment == 'original_experiment'), aes(x=factor(category, level=c('all', 'existing', '20to5', '20to20')), y=value, fill=variable),stat="identity", position='fill')+ scale_y_continuous(labels = scales::percent_format()) + xlab('') + ylab('') + ggtitle('Original classification') + theme_bw() + theme(legend.position = "none")
 
 g2 <- ggplot() +geom_bar(data = results_melted %>% filter(experiment == 'alternative_classification'), aes(x=factor(category, level=c('all', 'existing', '20to5', '20to20')), y=value, fill=variable),stat="identity", position='fill')+ scale_y_continuous(labels = scales::percent_format()) + xlab('') + ylab('') + ggtitle('Alternative classification') + theme_bw()
 
@@ -227,32 +229,45 @@ all_parameters_counts <- all_parameters %>% filter(unique_sample %in% samples)  
   separate(phenotype_combo, into=c('phenotype_from','phenotype_to'),sep='_to_', remove = FALSE) %>% rename(n_estimated = n)
 all_parameters_counts <- merge(all_parameters_counts, all_possibilities_counts %>% dplyr::select(c(phenotype_combo,n)), all.x=T, by='phenotype_combo') %>% mutate(n_est_p = (n_estimated/(n+1))*100)
 
+originalCellTypes <- originalCellTypeLabels()
+
 library(circlize)
-col_fun = colorRamp2(c(0, 100, 794), c("black", "white", "red"))
+col_fun = colorRamp2(c(0,794), c("white", "red"))
 
 all_possibilities_matrix <- reshape2::dcast(all_possibilities_counts,phenotype_to  ~ phenotype_from, value.var = 'n')
 rownames(all_possibilities_matrix) <- all_possibilities_matrix %>% pull(phenotype_to)
 all_possibilities_matrix <- all_possibilities_matrix %>% dplyr::select(-c(phenotype_to))
 all_possibilities_matrix <- all_possibilities_matrix   %>% replace(is.na(.), 0)
 
-hc = hclust(dist(t(all_possibilities_matrix)))
-column_order = colnames(all_possibilities_matrix)[hc$order]
-
-hm1 <- Heatmap(all_possibilities_matrix, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
-  row_names_gp = grid::gpar(fontsize = 6), column_title = 'phenotype_from', row_title = 'phenotype_to')
-save_pdf(hm1, filename = here('output/Distance_results/Missing_estimations_analysis/allpossibleHM2.pdf'),width=7,height=6)
-
+# hc = hclust(dist(t(all_possibilities_matrix)))
+# column_order = colnames(all_possibilities_matrix)[hc$order]
+# 
+# hm1 <- Heatmap(all_possibilities_matrix, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
+#   row_names_gp = grid::gpar(fontsize = 6), column_title = 'phenotype_from', row_title = 'phenotype_to')
+# save_pdf(hm1, filename = here('output/Distance_results/Missing_estimations_analysis/allpossibleHM2.pdf'),width=7,height=6)
+# 
 all_parameters_matrix <- reshape2::dcast(all_parameters_counts,phenotype_to  ~ phenotype_from, value.var = 'n_estimated')
 rownames(all_parameters_matrix) <- all_parameters_matrix %>% pull(phenotype_to)
 all_parameters_matrix <- all_parameters_matrix %>% dplyr::select(-c(phenotype_to))
 all_parameters_matrix <- all_parameters_matrix   %>% replace(is.na(.), 0)
-hm1 <- Heatmap(all_parameters_matrix, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
-  row_names_gp = grid::gpar(fontsize = 6),column_title = 'phenotype_from', row_title = 'phenotype_to')
-save_pdf(hm1, filename = here('output/Distance_results/Missing_estimations_analysis/allestimatedHM2.pdf'),width=7,height=6)
+
+counts <- cells %>% group_by(meta_description) %>% count()
+counts <- merge( tibble(meta_description = rownames(all_parameters_matrix)), counts, by='meta_description') %>% pull(n)
+column_ha = HeatmapAnnotation(count = anno_barplot(counts, ylim = c(0,2.5e5)))
+
+rownames(all_parameters_matrix) <- merge( tibble(name = rownames(all_parameters_matrix)), originalCellTypes, by='name') %>% pull(conversion)
+colnames(all_parameters_matrix) <- merge( tibble(name = colnames(all_parameters_matrix)), originalCellTypes, by='name') %>% pull(conversion)
+
+hm1 <- Heatmap(all_parameters_matrix, bottom_annotation = column_ha, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 8),
+  row_names_gp = grid::gpar(fontsize = 8),column_title = 'phenotype from', row_title = 'phenotype to', column_labels = sapply(colnames(all_parameters_matrix), latex2exp::TeX),row_labels = sapply(rownames(all_parameters_matrix), latex2exp::TeX))
+save_pdf(hm1, filename = here('output/final_figures/estimations_orginalClassification_HM.pdf'),width=7,height=6)
 
 
 ```
+
 ```{r}
+alternativeCellTypes <- alternativeCellTypeLabels()
+
 all_possible_samples <- cellCombinationCountsAlt %>% filter(n_to >= 5 & n_from >= 20)
 samples <- all_possible_samples %>% pull(unique_sample)
 all_possibilities_counts <- all_possible_samples  %>% dplyr::count(phenotype_combo) %>%
@@ -262,25 +277,36 @@ all_parameters_counts <- all_parametersAlt %>% filter(unique_sample %in% samples
   separate(phenotype_combo, into=c('phenotype_from','phenotype_to'),sep='_to_', remove = FALSE) %>% rename(n_estimated = n)
 all_parameters_counts <- merge(all_parameters_counts, all_possibilities_counts %>% dplyr::select(c(phenotype_combo,n)), all.x=T, by='phenotype_combo') %>% mutate(n_est_p = (n_estimated/(n+1))*100)
 
-all_possibilities_matrix <- reshape2::dcast(all_possibilities_counts,phenotype_to  ~ phenotype_from, value.var = 'n')
-rownames(all_possibilities_matrix) <- all_possibilities_matrix %>% pull(phenotype_to)
-all_possibilities_matrix <- all_possibilities_matrix %>% dplyr::select(-c(phenotype_to))
-all_possibilities_matrix <- all_possibilities_matrix   %>% replace(is.na(.), 0)
+# all_possibilities_matrix <- reshape2::dcast(all_possibilities_counts,phenotype_to  ~ phenotype_from, value.var = 'n')
+# rownames(all_possibilities_matrix) <- all_possibilities_matrix %>% pull(phenotype_to)
+# all_possibilities_matrix <- all_possibilities_matrix %>% dplyr::select(-c(phenotype_to))
+# all_possibilities_matrix <- all_possibilities_matrix   %>% replace(is.na(.), 0)
+# 
+# hc = hclust(dist(t(all_possibilities_matrix)))
+# column_order = colnames(all_possibilities_matrix)[hc$order]
+# 
+# hm1 <- Heatmap(all_possibilities_matrix, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
+#   row_names_gp = grid::gpar(fontsize = 6), column_title = 'phenotype_from', row_title = 'phenotype_to')
+# save_pdf(hm1, filename = here('output/Distance_results/alternative_classification/allpossibleHM2_alternative.pdf'),width=7,height=6)
 
-hc = hclust(dist(t(all_possibilities_matrix)))
-column_order = colnames(all_possibilities_matrix)[hc$order]
 
-hm1 <- Heatmap(all_possibilities_matrix, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
-  row_names_gp = grid::gpar(fontsize = 6), column_title = 'phenotype_from', row_title = 'phenotype_to')
-save_pdf(hm1, filename = here('output/Distance_results/alternative_classification/allpossibleHM2_alternative.pdf'),width=7,height=6)
 
 all_parameters_matrix_alternative <- reshape2::dcast(all_parameters_counts,phenotype_to  ~ phenotype_from, value.var = 'n_estimated')
 rownames(all_parameters_matrix_alternative) <- all_parameters_matrix_alternative %>% pull(phenotype_to)
 all_parameters_matrix_alternative <- all_parameters_matrix_alternative %>% dplyr::select(-c(phenotype_to))
 all_parameters_matrix_alternative <- all_parameters_matrix_alternative   %>% replace(is.na(.), 0)
-hm1 <- Heatmap(all_parameters_matrix_alternative, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 6),
-  row_names_gp = grid::gpar(fontsize = 6),column_title = 'phenotype_from', row_title = 'phenotype_to')
-save_pdf(hm1, filename = here('output/Distance_results/alternative_classification/allestimatedHM2_alternative.pdf'),width=7,height=6)
+
+
+counts <- cellsAlt %>% group_by(meta_description) %>% count()
+counts <- merge( tibble(meta_description = rownames(all_parameters_matrix_alternative)), counts, by='meta_description') %>% pull(n)
+column_ha = HeatmapAnnotation(count = anno_barplot(counts, ylim = c(0,2.5e5)))
+
+rownames(all_parameters_matrix_alternative) <- merge( tibble(name = rownames(all_parameters_matrix_alternative)), alternativeCellTypes, by='name') %>% pull(conversion)
+colnames(all_parameters_matrix_alternative) <- merge( tibble(name = colnames(all_parameters_matrix_alternative)), alternativeCellTypes, by='name') %>% pull(conversion)
+
+hm1 <- Heatmap(all_parameters_matrix_alternative,name='No. estimated \n samples', bottom_annotation = column_ha, cluster_rows = T, cluster_columns = T, col=col_fun, column_names_gp = grid::gpar(fontsize = 8),
+  row_names_gp = grid::gpar(fontsize = 8),column_title = 'phenotype from', row_title = 'phenotype to', column_labels = sapply(colnames(all_parameters_matrix_alternative), latex2exp::TeX),row_labels = sapply(rownames(all_parameters_matrix_alternative), latex2exp::TeX))
+save_pdf(hm1, filename = here('output/final_figures/estimations_AlternativeClassification_HM.pdf'),width=7,height=6)
 
 ```
 The heatmaps look better, but there are also less cell types in the alternative classification. What is the proportion of black squares?
@@ -368,10 +394,10 @@ show_distance_distribution_without_estimate <- function(all_distances_data, cell
   
   slide <- ggplot(data=cells%>% filter(ImageNumber == sample['tnumber'][[1]]) %>% 
                  filter(meta_description == sample['phenotype_from'][[1]] | meta_description == sample['phenotype_to'][[1]])) + 
-    geom_point(aes(x=Location_Center_X, y=Location_Center_Y, color=meta_description), alpha =0.5)+
+    geom_point(aes(x=Location_Center_X, y=Location_Center_Y, color=meta_description),size=6, alpha =0.5)+
     theme_bw() + ggtitle(paste('imagenumber: ', sample['tnumber'][[1]]))
 
-return(plot_grid(dist, slide))
+return(plot_grid(dist, slide, rel_widths = c(1,1.7)))
                          
 }
 
@@ -386,15 +412,16 @@ for (row in 1:nrow(failedcombinations_samples)){
 
 }
 
-failedcombinationsAlt <- cellCombinationCountsAlt %>% filter(unique_sample %in% setdiff(cellCombinationCountsAlt %>% pull(unique_sample), all_parametersAlt %>% pull(unique_sample)))  %>% filter(n_to > 5 & n_from > 20)
+failedcombinationsAlt <- cellCombinationCountsAlt %>% filter(unique_sample %in% setdiff(cellCombinationCountsAlt %>% pull(unique_sample), all_parametersAlt %>% pull(unique_sample))) %>% filter(n_to > 5 & n_from < 10)
 
 print(paste('Number of valid but failed distance distributions in alternative classification:', nrow(failedcombinationsAlt)))
 
 
 failedcombinations_samples <- sample_n(failedcombinationsAlt, 5)
 
-for (row in 1:nrow(failedcombinations_samples)){
+for (row in 3){
   print(show_distance_distribution_without_estimate(all_distances_dataAlt,cellsAlt, failedcombinations_samples[row,]))
+  ggsave(here('output/Distance_results/rarecombination.pdf'),width=12)
 }
 
 ```
@@ -624,7 +651,7 @@ saveRDS(outlier_points, here('scratch/outlier_parametersAlt.rds'))
 Does the parameter distribution look like a C-curve?
 
 ```{r plot all parameters}
-all_parameters <- getALLParameters()
+all_parameters <- getALLParametersA()
 outliers_original <- read_rds(here('scratch/outlier_parameters.rds')) %>% pull(unique_sample)
 below_threshold <- cellCombinationCounts %>% filter(n_from < 20 | n_to < 5) %>% pull(unique_sample)
 
@@ -655,7 +682,7 @@ g3 <- ggplot() +
   guides(colour = guide_legend(override.aes = list(size=10))) + theme(legend.position = "none")
 
 p <- addLabelToGrid(plot_grid(g1,g2,g3, nrow=1), 'Original Parameters')
-save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace.png'),p, base_width=15, base_height=5)
+# save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace.png'),p, base_width=15, base_height=5)
 
 
 outliersAlt <- read_rds(here('scratch/outlier_parametersAlt.rds')) %>% pull(unique_sample)
@@ -704,7 +731,7 @@ ggplot() +
   scale_y_log10() +
   xlab('Shape') + ylab('Scale') + ggtitle("Parameters with difference between\n distribution median and Weibull curve median")
 
-ggsave(paste(here('output/Distance_results/outlier_analysis/'), 'parameters_withdeltamedian.png', sep=''),width=6,heigh=4)
+# ggsave(paste(here('output/Distance_results/outlier_analysis/'), 'parameters_withdeltamedian.png', sep=''),width=6,heigh=4)
 
 cellCountsPerFeature <- merge(all_parameters, cellCombinationCounts %>% dplyr::select(c(unique_sample, n_from, n_to)), by='unique_sample', all.x=T)
 totalCounts <- cellCounts %>% group_by(tnumber) %>% dplyr::summarise(sum = sum(n))
@@ -751,7 +778,7 @@ g4 <- ggplot() +
 
 
 p <- addLabelToGrid(plot_grid(g1,g2,g3,g4, nrow=2), 'Original Parameters')
-save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace_withCellCounts.png'),p, base_width=10, base_height=7)
+# save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace_withCellCounts.png'),p, base_width=10, base_height=7)
 
 
 ggplot() +
@@ -780,7 +807,7 @@ ggplot() +
   xlab('Shape') + ylab('Scale') + ggtitle("METABRIC and combination means")  + 
   guides(colour = guide_legend(override.aes = list(size=10)))
 
-ggsave(paste(here('output/Distance_results/curveSpace_analysis/'), 'parameters_withCombinationMeans.png', sep=''),width=6,height=4)
+# ggsave(paste(here('output/Distance_results/curveSpace_analysis/'), 'parameters_withCombinationMeans.png', sep=''),width=6,height=4)
 
 print(means %>% filter((mean_shape > mean(means$mean_shape) + 2*sd(means$mean_shape)) | (mean_shape < mean(means$mean_shape) - 2*sd(means$mean_shape)) | mean_scale > mean(means$mean_scale) + 2*sd(means$mean_scale) | (mean_scale < mean(means$mean_scale) - 2*sd(means$mean_scale))))
 
@@ -795,7 +822,7 @@ ggplot() +
   xlab('Shape') + ylab('Scale') + ggtitle("METABRIC and sample means")
   # guides(colour = guide_legend(override.aes = list(size=10)))
 
-ggsave(paste(here('output/Distance_results/curveSpace_analysis/'), 'parameters_withSampleMeans.png', sep=''),width=6,height=4)
+# ggsave(paste(here('output/Distance_results/curveSpace_analysis/'), 'parameters_withSampleMeans.png', sep=''),width=6,height=4)
 
 
 print(means_images %>% filter((mean_shape > mean(means_images$mean_shape) + 2*sd(means_images$mean_shape)) | (mean_shape < mean(means_images$mean_shape) - 2*sd(means_images$mean_shape)) | (mean_scale > mean(means_images$mean_scale) + 2*sd(means_images$mean_scale) | (mean_scale < mean(means_images$mean_scale) - 2*sd(means_images$mean_scale)))))
@@ -839,7 +866,7 @@ ggplot() +
   scale_y_log10() +
   xlab('Shape') + ylab('Scale')
 
-ggsave(paste(here('output/Distance_results/Alberto_reproduction/'), 'extremeparameters.pdf', sep=''), width=6, height=4)
+# ggsave(paste(here('output/Distance_results/Alberto_reproduction/'), 'extremeparameters.pdf', sep=''), width=6, height=4)
 
 ```
 
@@ -852,7 +879,7 @@ ggplot() +
   stat_function(fun = dweibull, args = list(shape = belly$shape, scale = belly$scale),aes(colour='belly')) + ylim(0,0.2) +
   xlim(0,600) + theme_bw() + xlab('micron') + ylab('N')
 
-ggsave(paste(here('output/Distance_results/Alberto_reproduction/'), 'weibullcurves.pdf', sep=''),width=10, height=4)
+# ggsave(paste(here('output/Distance_results/Alberto_reproduction/'), 'weibullcurves.pdf', sep=''),width=10, height=4)
 
 ```
 
@@ -865,7 +892,7 @@ for (row in 1:nrow(sample_points)){
   title <- paste(sample_points[row,]['type'][[1]], '(shape:', round(sample_points[row,]['shape'][[1]],2), 'scale:',round(sample_points[row,]['scale'][[1]],2), ')')
   slideWithTitle <- addLabelToGrid(slide, title)
   print(slideWithTitle)
-  ggsave(here(paste('output/Distance_results/Alberto_reproduction/estimated_sample',row, '.pdf', sep='')),slideWithTitle, width=10, height=4)
+  # ggsave(here(paste('output/Distance_results/Alberto_reproduction/estimated_sample',row, '.pdf', sep='')),slideWithTitle, width=10, height=4)
 }
 ```
 
@@ -893,7 +920,7 @@ ggplot() +
   scale_y_log10() +
   xlab('Shape') + ylab('Scale')
 
-ggsave(here('output/Distance_results/outlier_analysis/outlierline.png'), width=6, height=4)
+# ggsave(here('output/Distance_results/outlier_analysis/outlierline.png'), width=6, height=4)
 
 sample_outliers_withDistanceDifference <- merge(sample_outliers, medians %>% dplyr::select(c(unique_sample, difference,median_observations, median_weibull)), by='unique_sample', all.x=T)
 
@@ -921,7 +948,7 @@ for (row in 1:nrow(sample_outliers_withDistanceDifference)){
   slide <- show_distance_distribution_outliers(sample_outliers_withDistanceDifference[row,],0.05)
   title <- paste('Outlier with delta difference:' , round(sample_outliers_withDistanceDifference[row,]['difference'][[1]],2), '\n(shape:', round(sample_outliers_withDistanceDifference[row,]['shape'][[1]],2), 'scale:',round(sample_outliers_withDistanceDifference[row,]['scale'][[1]],2), ')')
   slideWithTitle <- addLabelToGrid(slide, title)
-  ggsave(here(paste('output/Distance_results/outlier_analysis/outlier_sample',row, '.pdf', sep='')),slideWithTitle, width=10, height=4)
+  # ggsave(here(paste('output/Distance_results/outlier_analysis/outlier_sample',row, '.pdf', sep='')),slideWithTitle, width=10, height=4)
 }
 
 ```
@@ -944,7 +971,7 @@ ggplot() +
   scale_y_log10() +
   xlab('Shape') + ylab('Scale')
 
-ggsave(here('output/Distance_results/bellyline.pdf'), width=6, height=4)
+# ggsave(here('output/Distance_results/bellyline.pdf'), width=6, height=4)
 
 
 belly_points <- belly_points %>% mutate(type = 'belly')
@@ -957,7 +984,7 @@ for (row in 1:nrow(belly_points)){
   title <- paste(belly_points[row,]['type'][[1]], '(shape:', round(belly_points[row,]['shape'][[1]],2), 'scale:',round(belly_points[row,]['scale'][[1]],2), ')')
   slideWithTitle <- addLabelToGrid(slide, title)
   print(slideWithTitle)
-  ggsave(paste(here('output/Distance_results/bellyline_sample'),row,'.pdf',sep=''), width=10, height=4)
+  # ggsave(paste(here('output/Distance_results/bellyline_sample'),row,'.pdf',sep=''), width=10, height=4)
 
 }
 
@@ -985,7 +1012,7 @@ plot_parameters <- function(df, cell_type, TME_types, Tumor_types){
 for ( t in getTumorAndTMETypes()$TME_types){
   img <- plot_parameters(all_parameters,t,getTumorAndTMETypes()$TME_types,getTumorAndTMETypes()$tumor_types)
   print(img)
-  ggsave(paste(here('output/Distance_results/Alberto_reproduction/parameters_to_'),  gsub("[[:punct:]]", "", t),'.pdf',sep=''),height=8,width = 8)
+  # ggsave(paste(here('output/Distance_results/Alberto_reproduction/parameters_to_'),  gsub("[[:punct:]]", "", t),'.pdf',sep=''),height=8,width = 8)
 }
 
 ```
@@ -993,7 +1020,7 @@ for ( t in getTumorAndTMETypes()$TME_types){
 for ( t in getTumorAndTMETypes()$tumor_types){
   img <- plot_parameters(all_parameters,t, getTumorAndTMETypes()$TME_types,getTumorAndTMETypes()$tumor_types)
   print(img)
-  ggsave(paste(here('output/Distance_results/Alberto_reproduction/parameters_to_'),  gsub("[[:punct:]]", "", t),'.pdf',sep=''),height=8,width = 8)
+  # ggsave(paste(here('output/Distance_results/Alberto_reproduction/parameters_to_'),  gsub("[[:punct:]]", "", t),'.pdf',sep=''),height=8,width = 8)
 }
 
 ```
@@ -1007,7 +1034,8 @@ Alberto_TME_types <- c("CD3+","CD68+","CD8+CD3+","CD20+","CD3+FoxP3+")
 Alberto_Tumor_types <- c("PanCK+")
 
 for ( t in Alberto_TME_types){
-  img <- plot_parameters(Alberto_parameters,t, Alberto_TME_types, Alberto_Tumor_types)
+  img <- plot_parameters(Alberto_parameters,t, Alberto_TME_types, 
+                         Alberto_Tumor_types)
   print(img)
   # ggsave(paste(here('output/Distance_results/Alberto_reproduction/Albertoparameters_to_'),  gsub("[[:punct:]]", "", t),'.pdf',sep=''),height=8,width = 8)
 
@@ -1164,7 +1192,7 @@ g7 <- ggplot() +
 
 
 p <- addLabelToGrid(plot_grid(g1,g2,g3,g4,g5,g6,g7, nrow=4), 'Original parameters of TME and tumor relationships')
-save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace_tumorTME.png'),p, base_width=10, base_height=15)
+# save_plot(here('output/Distance_results/curveSpace_analysis/parameterSpace_tumorTME.png'),p, base_width=10, base_height=15)
 
 
 ```
@@ -1238,47 +1266,42 @@ ggsave(here('output/Distance_results/alternative_classification/parameterSpace_w
 
 p <- addLabelToGrid(plot_grid(g1,g2,g3,g4, nrow=2), 'Alternative Parameters')
 save_plot(here('output/Distance_results/alternative_classification/parameterSpace_withCellCounts.png'),p, base_width=10, base_height=7)
-```
 
-Take a look at the distributions with shape = 3.
+Alberto_parameters <- read_tsv(here('DATA/global_weib_coeff_oct.tsv')) %>% mutate(type='NABUCCO')
+Alberto_parameters <- Alberto_parameters %>% separate(phenotype_combo, c('phenotype_from', 'phenotype_to'), sep = '_to_') %>% rename(shape = a, scale = b)
 
-```{r}
-three_line <- all_parametersAlt %>% filter(round(shape,5) == 3.09034)
-distance_data_line <- cellCombinationCountsAlt %>% filter(unique_sample %in% (three_line %>% pull(unique_sample))) %>% filter(n_from > 20 & n_to > 5) %>% pull(unique_sample)
-
-ggplot() + 
-  geom_point(data = all_parametersAlt %>% filter(!(unique_sample %in% (three_line %>% pull(unique_sample)))), aes(x=shape, y=scale, colour='all'),,alpha=0.1, size=0.5) +
-  geom_point(data = three_line, aes(x=shape, y=scale,colour='line'), alpha=0.5, size=0.5) +
-  theme_bw() +
+g1 <- ggplot() +
+  geom_point(data =cellCountsPerFeature  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale),size=0.5, alpha=0.1) +
+  # geom_density_2d(data =cellCountsPerFeature %>% filter(!(unique_sample %in% outliersAlt))  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale), color='blue') +
+    theme_bw() +
   ylim(10,300) + xlim(0,6) +
   scale_y_log10() +
-  xlab('Shape') + ylab('Scale') + ggtitle("All parameters with outliers") + 
-  guides(colour = guide_legend(override.aes = list(size=10)))
+  xlab('Shape') + ylab('Scale')
 
-sample_line <- sample_n(three_line %>% filter(!(unique_sample %in% outliersAlt)) %>% filter(unique_sample %in% distance_data_line),10)
 
-for (row in 1:nrow(sample_line)){
-  slide <- show_distance_distribution(cellsAlt, all_distances_dataAlt, sample_line[row,],0.2)
-  print(slide)
-}
-
-```
-```{r}
-initParams_line2 <- reshape2::dcast(`init_params_CK+_ERorHER2+_cells_to_CD38+_cells`, combo + tnumber ~ term, value.var = 'estimate')
-
-ggplot() +
-  # geom_point(data =initParams_line, aes(x=shape, y=scale),size=0.5, alpha=1) +
-  geom_point(data =initParams_line2, aes(x=shape, y=scale),colour='red', alpha=0.5,size=0.5, alpha=1) +
-  theme_bw() +
+g2 <- ggplot() +
+  geom_point(data =cellCountsPerFeature %>% filter(!(unique_sample %in% outliersAlt))  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale),size=0.5, alpha=0.1) +
+    geom_point(data =cellCountsPerFeature %>% filter((unique_sample %in% outliersAlt))  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale,color='outlier'),size=0.5, alpha=1) +
+  # geom_density_2d(data =cellCountsPerFeature %>% filter(!(unique_sample %in% outliersAlt))  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale), color='blue') +
+    theme_bw() +
   ylim(10,300) + xlim(0,6) +
   scale_y_log10() +
-  xlab('Shape') + ylab('Scale') + ggtitle("init parameters")
+  xlab('Shape') + ylab('Scale') + guides(colour = guide_legend(override.aes = list(size=10))) + theme(legend.position="bottom")
 
+
+g3 <- ggplot() +
+  geom_point(data =cellCountsPerFeature %>% filter(!(unique_sample %in% outliersAlt))  %>% filter(!(unique_sample %in% below_thresholdAlt)), aes(x=shape, y=scale,colour='METABRIC'),size=0.5, alpha=0.1) +
+  geom_point(data =Alberto_parameters, aes(x=shape, y=scale,colour='NABUCCO'),size=0.5, alpha=1) +
+    theme_bw() +
+  scale_colour_manual(values=c("black","#F8766D" )) +
+  ylim(10,300) + xlim(0,6) +
+  scale_y_log10() +
+  xlab('Shape') + ylab('Scale') + guides(colour = guide_legend(override.aes = list(size=10))) + theme(legend.position="bottom")
+
+allPlots <- plot_grid(g1,g2,g3, nrow = 1)
+
+ggsave(here('output/final_figures//parametersNABUCCOMETABRIC_legend.png'),width=18,height=6)
 ```
-
-
-
-The line are estimations for the combination: CK+_ERorHER2+_cells_to_CD38+_cells.
 
 
 ```{r}
