--- a/region_analysis.Rmd
+++ b/region_analysis.Rmd
@@ -47,18 +47,29 @@ cellsWithStructure <- merge(cellsWithStructure, structureLabels, by.x='TMEStruct
 ```
 
 ```{r}
-show_slideStructures <- function(df, sample_number, highlight_A, column){
+show_slideStructures <- function(df, sample_number, column){
   slide_1 <- ggplot(data=df%>% filter(ImageNumber == sample_number)) + geom_point(aes(x=Location_Center_X, y=Location_Center_Y, color=get(column)), alpha =1) +theme_bw() + ggtitle(paste('imagenumber: ', sample_number)) + scale_color_discrete(name = 'TME structure')
   
   return(slide_1)
 }
 
-show_slideStructures(cellsWithStructure,12, 'Vascular stroma','label')
+imagesWithStructures <- cellsWithStructure %>% group_by(ImageNumber) %>% count(communityID) %>% count(ImageNumber) %>% filter(n > 5) %>% pull(ImageNumber)
+
+images <- sample(imagesWithStructures,5)
+for (i in images){
+  print(show_slideStructures(cellsWithStructure,i,'label'))
+
+}
+
 # ggsave(here('output/region_analysis/slide743.pdf'),width=15)
 ```
 ## KDE approach
 ```{r}
-structure_type <- 'Vascular stroma'
+# structure_type <- 'Vascular stroma'
+# structure_type <- 'Suppressed expansion'
+# structure_type <- 'APC enriched'
+# structure_type <- 'Granulocyte enriched'
+structure_type <- "TLSlike"
 
 # Find image with a lot of vascular stroma
 VS <- cellsWithStructure %>% filter(label == structure_type) %>% group_by(ImageNumber) %>% dplyr::count(communityID) %>% dplyr::count(ImageNumber)
@@ -66,110 +77,85 @@ VS_imageN <- VS %>% filter(n > 5) %>% pull(ImageNumber)
 VS_images <- cellsWithStructure %>% filter(ImageNumber %in% VS_imageN)
 VS_images <- VS_images %>% mutate(label =ifelse(label == structure_type, structure_type, 'other'))
 VS_images$label[is.na(VS_images$label)] <- "other"
-show_slideStructures(VS_images, VS_imageN[[2]], 'Vascular stroma','label')
+show_slideStructures(VS_images, sample(VS_imageN,3),'label')
 
 
 ```
 
 
-```{r}
-library(cowplot)
-data_with_assigned_locations <- readRDS(here('scratch/dataWithSplittedRegions.rds'))
-
-sampleImages <- sample(VS_imageN, 5)
-
-for (i in sampleImages){
-  print(plot_grid(show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','label'),show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','assigned_loc')))
-}
-
-total <- data_with_assigned_locations %>% group_by(ImageNumber) %>% count()
-structureCount <- data_with_assigned_locations %>% group_by(ImageNumber,label) %>% count()
-structureCount <- merge(total, structureCount, by='ImageNumber')
-structureCount <- structureCount %>% mutate(proportion = round(100*n.y/n.x,2))
-selectedImages <- structureCount %>% filter(label == 'Vascular stroma') %>% filter(proportion > 20) %>% pull(ImageNumber)
-
-sampleImages <- sample(selectedImages, 5)
-
-for (i in sampleImages){
-  print(plot_grid(show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','label'),show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','assigned_loc')))
-}
-
-
-```
 With minimal bandwith = 50
 
 ```{r}
 library(cowplot)
-data_with_assigned_locations <- readRDS(here('scratch/dataWithSplittedRegions2.rds'))
-
-sampleImages <- sample(data_with_assigned_locations %>% pull(ImageNumber), 5)
-
-for (i in sampleImages){
-  print(plot_grid(show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','label'),show_slideStructures(data_with_assigned_locations %>% mutate(assigned_loc = ifelse(assigned_loc == 'S', 'structure-dense region','low-density region' )),i, 'Vascular stroma','assigned_loc')))
-    ggsave(paste(here('output/region_analysis/KDE_result_'),i,'.pdf',sep=''),width=10,height=4)
-
-}
-
-data_with_assigned_locations <- data_with_assigned_locations %>% mutate(assigned_loc = ifelse(assigned_loc == 'S', 'Vascular stroma', 'low'))
+data_with_assigned_locations <- readRDS(paste(here('scratch/Regions_'),gsub(' ','_',structure_type,fixed=T), '.rds', sep=''))
+data_with_assigned_locations <- data_with_assigned_locations %>% mutate(assigned_loc = ifelse(assigned_loc == 'S', structure_type, 'low-density region'))
 data_with_assigned_locations <- data_with_assigned_locations %>% mutate(correct_prediction = ifelse(assigned_loc == label, T, F))
-total <- data_with_assigned_locations %>% filter(label == 'Vascular stroma') %>% group_by(ImageNumber) %>% count()
-predictionPerformance <- data_with_assigned_locations %>% group_by(ImageNumber,correct_prediction) %>% count()
-predictionPerformance <- merge(total, predictionPerformance, by='ImageNumber')
-predictionPerformance <- predictionPerformance %>% mutate(proportion = round(100*n.y/n.x,2))
-selectedImages <- predictionPerformance %>% filter(correct_prediction == T) %>% filter(proportion> 70) %>% pull(ImageNumber)
 
-sampleImages <- sample(data_with_assigned_locations %>% pull(ImageNumber), 5)
+sampleImages <- sample(unique(data_with_assigned_locations %>% pull(ImageNumber)), 5,replace = F)
 
 for (i in sampleImages){
-  print(plot_grid(show_slideStructures(data_with_assigned_locations,i, 'Vascular stroma','label'),show_slideStructures(data_with_assigned_locations %>% mutate(assigned_loc = ifelse(assigned_loc == 'Vascular stroma', 'structure-dense region','low-density region' )),i, 'Vascular stroma','assigned_loc')))
-  ggsave(paste(here('output/region_analysis/KDE_Filteredresult_'),i,'.pdf',sep=''),width=10,height=4)
+  print(plot_grid(show_slideStructures(data_with_assigned_locations,i,'label'),show_slideStructures(data_with_assigned_locations,i,'assigned_loc')))
+    # ggsave(paste(here('output/region_analysis/KDE_result_'),i,'.pdf',sep=''),width=10,height=4)
 
 }
 
+print(unique(data_with_assigned_locations$assigned_loc))
 ```
-
-
 
 Split images
 
 ```{r}
-splittedCells <- data_with_assigned_locations %>% filter(ImageNumber %in% selectedImages) %>% unite('Split_ImageNumber',c(ImageNumber, assigned_loc), sep = '_', remove = F)
-saveRDS(splittedCells, here('DATA/splittedCells_vascularStroma.rds'))
+splittedCells <- data_with_assigned_locations %>% unite('Split_ImageNumber',c(ImageNumber, assigned_loc), sep = '_', remove = F)
+saveRDS(splittedCells, paste(here('DATA/splittedCells'),'_',gsub(' ', '_',structure_type,fixed=T),'.rds', sep=''))
 
 ```
 
 ## Weibull estimations
 
 ```{r}
-source(here('loadData.R'))
+# structure_type <- 'Vascular_stroma'
+# structure_type <- 'Suppressed_expansion'
+# structure_type <- 'APC_enriched'
+# structure_type <- 'Granulocyte_enriched'
+structure_type <- "TLSlike"
 
-CompileALLParameters_regions <- function(type, save=TRUE){
-  all_parameters <- get_parameters(paste(here('scratch/success_models_'),type,'/',sep='')) %>%
-    separate(phenotype_combo, into=c('phenotype_from','phenotype_to'),sep='_to_', remove = FALSE) %>%
-    filter(a > 0.5) %>%
-    filter(b > 8) %>%
-    dplyr::rename(shape =a , scale = b) %>%
-    unite('unique_sample', c(tnumber, phenotype_combo), remove=F)
-  
-  if(save){
-    saveRDS(all_parameters, file = paste(here('scratch/all_parameters_'), type,'.rds',sep=''))
-  }
-  
-  return(all_parameters)
-  
-}
+```
 
-CompileALLParameters_regions('Vascular_stroma')
-transform_parameters_to_matrix(readRDS(here('scratch/all_parameters_Vascular_stroma.rds')), here('scratch/features/regions/shape_parameters_Vascular_stroma.rds'),here('scratch/features/regions/scale_parameters_Vascular_stroma.rds') )
+
+```{r}
+# source(here('loadData.R'))
+# 
+# CompileALLParameters_regions <- function(type, save=TRUE){
+#   all_parameters <- get_parameters(paste(here('scratch/success_models_'),type,'/',sep='')) %>%
+#     separate(phenotype_combo, into=c('phenotype_from','phenotype_to'),sep='_to_', remove = FALSE) %>%
+#     filter(a > 0.5) %>%
+#     filter(b > 8) %>%
+#     dplyr::rename(shape =a , scale = b) %>%
+#     unite('unique_sample', c(tnumber, phenotype_combo), remove=F)
+# 
+#   if(save){
+#     saveRDS(all_parameters, file = paste(here('scratch/all_parameters_'), type,'.rds',sep=''))
+#   }
+# 
+#   return(all_parameters)
+# 
+# }
+# 
+# CompileALLParameters_regions(structure_type)
+# transform_parameters_to_matrix(readRDS(paste(here('scratch/all_parameters_'), structure_type, '.rds',sep='')),
+#                                paste(here('scratch/features/regions/shape_parameters_'),structure_type, '.rds',sep=''),
+#                                paste(here('scratch/features/regions/scale_parameters_'), structure_type, '.rds',sep='') )
 ```
 
 ```{r}
-allparameters_VS <- readRDS(here('scratch/all_parameters_Vascular_stroma.rds'))  %>% separate(tnumber,c('tnumber','region'),sep='_')
+allparameters_structure <- readRDS(paste(here('scratch/all_parameters_'), structure_type, '.rds',sep='')) %>% separate(tnumber,c('tnumber','region'),sep='_') %>% mutate(region = ifelse((region == 'low' | region == 'low-density region'),paste(gsub('_', ' ', structure_type),'sparse'),paste(gsub('_', ' ', structure_type),'dense')))  %>% filter(!(tnumber %in% getNonTumourImages()))
+
+
 tumor_celltypes <- grep('CK', unique(cells %>% pull(meta_description)),fixed = T,value=T)
 tme_celltypes <- setdiff( unique(cells %>% pull(meta_description)), tumor_celltypes)
 
 ggplot() + 
-  geom_point(data = allparameters_VS, aes(x=shape, y=scale,colour=region),alpha=0.8, size=0.5) +
+  geom_point(data = allparameters_structure, aes(x=shape, y=scale,colour=region),alpha=0.8, size=0.5) +
   theme_bw() +
   ylim(10,300) + xlim(0,6) +
   scale_y_log10() +
@@ -180,19 +166,21 @@ ggplot() +
 
 Are some features estimated more in a certain region?
 ```{r}
-shapeFeatures_VS <- readRDS(here('scratch/features/regions/shape_parameters_Vascular_stroma.rds')) %>% separate(tnumber,c('tnumber','region'),sep='_')
-scaleFeatures_VS <- readRDS(here('scratch/features/regions/scale_parameters_Vascular_stroma.rds')) %>% separate(tnumber,c('tnumber','region'),sep='_')
+shapeFeatures_structure <- readRDS(paste(here('scratch/features/regions/shape_parameters_'),structure_type, '.rds',sep=''))%>% separate(tnumber,c('tnumber','region'),sep='_') %>% mutate(region = ifelse((region == 'low' | region == 'low-density region'),paste(gsub('_', ' ', structure_type),'sparse'),paste(gsub('_', ' ', structure_type),'dense')))
+scaleFeatures_structure <- readRDS(paste(here('scratch/features/regions/scale_parameters_'), structure_type, '.rds',sep='') ) %>% separate(tnumber,c('tnumber','region'),sep='_') %>% mutate(region = ifelse((region == 'low' | region == 'low-density region'),paste(gsub('_', ' ', structure_type),'sparse'),paste(gsub('_', ' ', structure_type),'dense')))
 
-na_counts <- merge(data.frame(colSums(is.na(shapeFeatures_VS %>% filter(region == 'Vascular stroma')))),data.frame(colSums(is.na(shapeFeatures_VS %>% filter(region == 'low')))),by='row.names')
+na_counts <- merge(data.frame(colSums(is.na(shapeFeatures_structure %>% filter(region == paste(gsub('_', ' ', structure_type),'dense'))))),data.frame(colSums(is.na(shapeFeatures_structure %>% filter(region == paste(gsub('_', ' ', structure_type),'sparse'))))),by='row.names')
 
 colnames(na_counts)[1] <- "feature"
 colnames(na_counts)[2] <- "high"
 colnames(na_counts)[3] <- "low"
 na_counts <- reshape2::melt(na_counts)
 na_counts <- na_counts %>% filter(!(feature %in% c('tnumber', 'region'))) %>% separate(feature, c('phenotype_from', 'phenotype_to'),sep='_to_') 
+# na_counts <- na_counts %>% mutate(value = 100*value/length(unique(shapeFeatures_structure$tnumber)))
 
 ggplot(na_counts %>% filter(variable=='high') %>% filter((phenotype_from %in% tme_celltypes) & (phenotype_to %in% tme_celltypes))) + geom_tile(aes(x=phenotype_from, y=phenotype_to, fill=value)) + theme_bw() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle('high density region')
-ggplot(na_counts %>% filter(variable=='low') %>% filter((phenotype_from %in% tme_celltypes) & (phenotype_to %in% tme_celltypes))) + geom_tile(aes(x=phenotype_from, y=phenotype_to, fill=value)) + theme_bw() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle('low density region')
+
+ggplot(na_counts %>% filter(variable=='low' | variable == 'low-density region') %>% filter((phenotype_from %in% tme_celltypes) & (phenotype_to %in% tme_celltypes))) + geom_tile(aes(x=phenotype_from, y=phenotype_to, fill=value)) + theme_bw() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + ggtitle('low density region')
 
 ```
 
@@ -210,15 +198,34 @@ generate_matrix_zeroOneScaling <- function(df, col_rownames ,subselection=NULL, 
   
   
   # Scaling
-  m <- apply(m, 2, function(x) (x - min(x)) / (max(x) - min(x)))
+  # m <- apply(m, 2, function(x) (x - min(x)) / (max(x) - min(x)))
   
   
   return(m)
 }
 
-shapeFeatures_VS <- generate_matrix_zeroOneScaling(readRDS(here('scratch/features/regions/shape_parameters_Vascular_stroma.rds')), 'tnumber')
-scaleFeatures_VS <- generate_matrix_zeroOneScaling(readRDS(here('scratch/features/regions/scale_parameters_Vascular_stroma.rds')), 'tnumber')
-densityFeatures_VS <- generate_matrix_zeroOneScaling(readRDS(here('scratch/features/regions/cell_proportions_per_imageVS.rds')), 'ImageNumber')
+shapeFeatures_structure <- generate_matrix_zeroOneScaling(readRDS(paste(here('scratch/features/regions/shape_parameters_'),structure_type, '.rds',sep='')), 'tnumber')
+scaleFeatures_structure <- generate_matrix_zeroOneScaling(readRDS(paste(here('scratch/features/regions/scale_parameters_'), structure_type, '.rds',sep='')), 'tnumber')
+densityFeatures_structure <- generate_matrix_zeroOneScaling(readRDS(paste(here('scratch/features/regions/cell_proportions_per_image_'), structure_type,'.rds',sep='')), 'ImageNumber')
+
+filterSignificant <- function(df){
+  subset <- as.data.frame(df) %>% mutate(tnumber = row.names(df)) %>% separate(tnumber, c('tnumber', 'group'),sep = '_')
+  nonZero_counts <- subset %>%
+    group_by(group) %>%
+    summarise(across(everything(), ~ sum(. != 0)))
+  melted_nonzero <- as.data.frame(t(nonZero_counts %>% dplyr::select(-c('group','tnumber'))))
+  melted_nonzero <- melted_nonzero %>% mutate(sig = ifelse((as.numeric(V1) > 5) &(as.numeric(V2) > 5), T, F))
+  
+  significant_features <- rownames(data.frame(melted_nonzero[2:nrow(melted_nonzero),]) %>% filter(sig == T))
+  
+  return(significant_features)
+
+}
+
+
+
+shapeFeatures_structure <- shapeFeatures_structure[,filterSignificant(shapeFeatures_structure)] + 0.001
+scaleFeatures_structure <- scaleFeatures_structure[,filterSignificant(scaleFeatures_structure)] + 0.001
 
 ```
 
@@ -226,12 +233,13 @@ densityFeatures_VS <- generate_matrix_zeroOneScaling(readRDS(here('scratch/featu
 # Load required libraries
 library(multcomp)
 library(ggrepel)
+fold_threshold = 1
+p_value = -log10(0.05)
 
 computePvalues <- function(featureSet){
-  subset <- as.data.frame(featureSet) %>% mutate(tnumber = row.names(featureSet)) %>% separate(tnumber, c('tnumber', 'group'),sep = '_')  %>% dplyr::select(-dplyr::any_of(c('tnumber')))
+  subset <- as.data.frame(featureSet) %>% mutate(tnumber = row.names(featureSet)) %>% separate(tnumber, c('tnumber', 'group'),sep = '_') %>% dplyr::select(-dplyr::any_of(c('tnumber'))) %>% mutate(group = ifelse((group == 'low' | group == 'low-density region'),paste(gsub('_', ' ', structure_type),'sparse'),paste(gsub('_', ' ', structure_type),'dense')))%>% dplyr::select(-any_of(c('isTumour')))
   
-  response <- subset$group
-
+  
   # Create an empty vector to store the adjusted p-values and log2 fold changes
   p_values <- rep(NA, ncol(subset)-1)
   log2_fold_changes <- rep(NA, ncol(subset)-1)
@@ -239,17 +247,32 @@ computePvalues <- function(featureSet){
   # Perform univariate feature importance analysis for each feature
   for (i in 1:(ncol(subset)-1)) {
     # Extract the current feature
-    feature <- subset[, i]
+    
+    feature_subset <- subset %>% filter(!(subset[, i] == 0.001 ))
+    feature <- feature_subset[, i]
+    response <- feature_subset$group
+    
+    computePvalue <- function(feature, response) {
+    p_value <- tryCatch(
+        { p <- t.test(feature ~ response)$p.value
+        return(p)
+        
+        
+        },
+        error=function(cond) {
+            message(colnames(featureSet)[[i]])
+            return(1)
+        })
+        return(p_value)
+    }
+    
+    p_value <- computePvalue(feature, response)
 
-    # Perform a t-test to assess the significance of the feature
-    test_result <- t.test(feature ~ response)
-
-    # Extract the p-value from the test result
-    p_value <- test_result$p.value
 
     # Calculate the log2 fold change between the response groups
     mean_response <- tapply(feature, response, mean)
-    log2_fold_change <- log2(mean_response['Vascular stroma'] / mean_response['low'])
+
+    log2_fold_change <- log2((mean_response[paste(gsub('_', ' ', structure_type),'dense')]) / mean_response[paste(gsub('_', ' ', structure_type),'sparse')])
 
     # Store the p-value and log2 fold change in their respective vectors
     p_values[i] <- p_value
@@ -269,81 +292,168 @@ computePvalues <- function(featureSet){
   return(result)
 }
 
-univariateFeatures <- computePvalues(shapeFeatures_VS) %>% mutate(featureSet = 'shape')
-univariateFeatures <- rbind(univariateFeatures, (computePvalues(scaleFeatures_VS) %>% mutate(featureSet = 'scale')))
-univariateFeatures <- rbind(univariateFeatures, (computePvalues(densityFeatures_VS) %>% mutate(featureSet = 'density')))
+
+univariateFeatures <- computePvalues(shapeFeatures_structure) %>% mutate(featureSet = 'shape')
+univariateFeatures <- rbind(univariateFeatures, (computePvalues(scaleFeatures_structure) %>% mutate(featureSet = 'scale')))
+univariateFeatures <- rbind(univariateFeatures, (computePvalues(densityFeatures_structure) %>% mutate(featureSet = 'density')))
 univariateFeatures <- univariateFeatures %>% mutate(minlogP = -log(Adjusted_p_value, base = 10))
 univariateFeatures <- univariateFeatures %>% mutate(Feature = gsub('_CPh','', Feature,fixed=T))
+
+# univariateFeatures <- univariateFeatures %>% mutate(Sig = ifelse((minlogP > -log10(0.05)) & ((abs(log2FoldChange) > 1)),T,F))
+univariateFeatures <- univariateFeatures %>% mutate(Sig = ifelse((minlogP > -log10(0.05)),T,F))
 
 ```
 
 ```{r}
 # Creating the volcano plot
-fold_threshold = 1
-p_value = -log10(0.05)
-univariateFeatures <- univariateFeatures %>% mutate(Sig = ifelse((minlogP > -log10(0.05)) & (log2FoldChange < -fold_threshold | log2FoldChange > fold_threshold), T, F))
+# top_values <- univariateFeatures %>% filter(log2FoldChange > 1 & Sig ==T) %>% slice_max(order_by = log2FoldChange, n = 5)
+top_values2 <- univariateFeatures %>% filter(Sig ==T) %>% slice_max(order_by = abs(minlogP*log2FoldChange), n = 5)
+
 
 ggplot() +
+  geom_vline(xintercept=c(-fold_threshold, fold_threshold), col="black") +
+  geom_hline(yintercept=-log10(0.05), col="black") +
   geom_point(data = (univariateFeatures %>% filter(Sig == T)), aes(x = log2FoldChange, y =minlogP,colour=featureSet)) +
   geom_point(data = (univariateFeatures %>% filter(Sig == F)), aes(x = log2FoldChange, y =minlogP),color='grey') +
+   # geom_label_repel(data= top_values, aes(x=log2FoldChange, y=minlogP, label=gsub('_originalType','',Feature)), color='black',size =2,nudge_x = 3) +
+    geom_label_repel(data= top_values2, aes(x=log2FoldChange, y=minlogP, label=gsub('_originalType','',Feature)), color='black',size =2,nudge_y = 1) +
   labs(x = "Log2 Fold Change",
        y = "-log10 Adjusted P-value",
-       title = "Univariate feature importance") + geom_vline(xintercept=c(-fold_threshold, fold_threshold), col="black") +
-        geom_hline(yintercept=-log10(0.05), col="black") +theme_bw()
+       title = "Univariate feature importance") + 
 
-ggsave(here('output/region_analysis/volcanoPlot_VS.pdf'),width=6,height=4)
+  theme_bw()
+
+ggsave(paste(here('output/region_analysis/volcanoPlot_'), structure_type, '.pdf',sep=''),width=6,height=4)
 ```
 ```{r}
 significant_densityFeatures <- grep('_to_', univariateFeatures %>% filter(Sig == T) %>% pull(Feature),invert=T,value=T, fixed=T)
-significant_distanceFeatures <- grep('_to_',grep('CK',univariateFeatures %>% filter(Sig == T) %>% pull(Feature), invert = T, value = T),value=T, fixed=T)
+# significant_distanceFeatures <- grep('_to_',grep('CK',univariateFeatures %>% filter(Sig == T) %>% pull(Feature), invert = T, value = T),value=T, fixed=T)
+significant_distanceFeatures <- grep('_to_',univariateFeatures %>% filter(Sig == T) %>% pull(Feature),value=T, fixed=T)
+
+significant_distanceFeatures <- grep('B cells_to',univariateFeatures %>% pull(Feature),value=T, fixed=T)
+
+
+print(significant_densityFeatures)
+print(significant_distanceFeatures)
+
 ```
+```{r}
+
+retrieveDistanceData <- function(type, parameter_df){
+  distance_data <- read_tsv(paste(here('scratch/AUCScaledSlides_300_'), type, '.tsv',sep='')) %>% as_tibble %>%
+  mutate(distance_window = WinMean) %>%
+  mutate(phenotype_combo = paste(phenotype_from, phenotype_to, sep='_to_')) %>%
+  dplyr::select(tnumber, phenotype_combo, `N.per.mm2.scaled`, distance_window) %>%
+  mutate(new = `N.per.mm2.scaled` * 1000) %>%
+  mutate(new =round(new))
+  
+  estimated_distances <- distance_data  %>% unite('unique_sample', c(tnumber, phenotype_combo), remove=F) %>% filter(unique_sample %in% parameter_df$unique_sample)
+  
+  return(estimated_distances)
+  
+}
+
+computeMedians <- function(distance_data){
+    total_observations <- distance_data %>% group_by(unique_sample) %>%
+  summarise(total_observations= c_across(cols = c(N.per.mm2.scaled)) %>% sum())
+
+  medians <- merge(distance_data, total_observations, by='unique_sample', all.x=T)
+  medians <- medians %>% mutate(frequency = round((N.per.mm2.scaled / total_observations)*10000))
+  medians <- medians %>% group_by(unique_sample) %>% summarise(
+    median_observations = median(rep(distance_window,frequency))
+    )
+  return(medians)
+}
+```
+
+
+
+```{r}
+densities <- readRDS(paste(here('scratch/features/regions/cell_proportions_per_image_'),structure_type,'.rds',sep = ''))
+names(densities) <- gsub('_CPh','',gsub('+', 'plus', names(densities), fixed = T))
+names(densities) <- gsub('_CPh','',gsub('-', 'min', names(densities), fixed = T))
+
+distance_data_structure <- retrieveDistanceData(structure_type, allparameters_structure)
+medians_structure <- computeMedians(distance_data_structure)
+```
+
+```{r}
+library(ggpubr)
+library(rstatix)
+library(rlang)
+
+DensityPlot <- function(df, response, feature){
+  d <- df %>% separate(ImageNumber, c('tnumber', 'region'),sep='_') %>% mutate(region = ifelse((region == 'low' | region == 'low-density region'),paste(gsub('_', ' ', structure_type),'sparse'),paste(gsub('_', ' ', structure_type),'dense')))
+  
+  p <- ggboxplot(na.omit(d), x = 'region', y = feature) + ylim(0,1) + ylab('cell count proportion') + xlab('') + ggtitle(gsub('plus', '+', gsub('min', '-', feature, fixed = T), fixed = T)) + stat_compare_means(method = "t.test", label.x = 1.5, label.y = 0.8,label = 'p.format') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+  return(p)
+}
+```
+
+
+
 ```{r}
 library(patchwork)
 library(cowplot)
 
 retrieveParameters <- function(df,structure,feature){
-  d <- data.frame(df) %>% mutate(tnumber = row.names(df)) %>% dplyr::select(-dplyr::any_of(c('tnumber'))) %>% filter(phenotype_combo == feature) %>% rename(group = region)
+  d <- data.frame(df) %>% dplyr::select(-dplyr::any_of(c('tnumber'))) %>% filter(phenotype_combo == feature) %>% rename(group = region)
+
   mean_d <- d %>% group_by(group) %>% summarise(mean_shape = mean(shape), mean_scale =mean(scale))
   # print(mean_d)
-  shape_group <- mean_d[1,2] %>% pull(mean_shape)
-  scale_group <-  mean_d[1,3] %>% pull(mean_scale)
-  shape_nogroup <- mean_d[2,2]  %>% pull(mean_shape)
-  scale_nogroup <- mean_d[2,3]  %>% pull(mean_scale)
+  shape_group <- mean_d %>% filter(group == paste(gsub('_', ' ', structure_type),'dense')) %>% pull(mean_shape)
+  scale_group <-  mean_d %>% filter(group == paste(gsub('_', ' ', structure_type),'dense')) %>% pull(mean_scale)
+  shape_nogroup <- mean_d %>% filter(group == paste(gsub('_', ' ', structure_type),'sparse')) %>% pull(mean_shape)
+  scale_nogroup <- mean_d %>% filter(group == paste(gsub('_', ' ', structure_type),'sparse')) %>% pull(mean_scale)
   
   return(list('shape' = shape_group, 'scale' = scale_group, 'shape_alternative' = shape_nogroup, 'scale_alternative' = scale_nogroup))
 }
 
 
-create_boxplot <- function(df, structure,feature){
-  d <- data.frame(df) %>% mutate(tnumber = row.names(df)) %>% dplyr::select(-dplyr::any_of(c('tnumber')))%>% filter(phenotype_combo == feature) %>% rename(group = region)
-
-  b1 <- ggplot(na.omit(d)) + geom_boxplot(aes(x=group, y=shape)) + theme_bw() + xlab('') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + xlim(structure, 'low')
-  b2 <- ggplot(na.omit(d)) + geom_boxplot(aes(x=group, y=scale)) + theme_bw() + xlab('') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))  + xlim(structure, 'low')
+create_boxplot <- function(df,medians, structure,feature){
+  d <- data.frame(df) %>% mutate(tnumber = row.names(df)) %>% dplyr::select(-dplyr::any_of(c('tnumber')))%>% filter(phenotype_combo == feature) %>% rename(group = region) %>% mutate(group = ifelse(grepl(structure, unique_sample,fixed =T), paste(gsub('_', ' ', structure_type),'dense'), paste(gsub('_', ' ', structure_type),'sparse')))
   
-  return(plot_grid(b1,b2,nrow=1))
+  medians <- medians %>% filter(grepl(feature, unique_sample,fixed = T) ) %>% mutate(group = ifelse(grepl(structure, unique_sample,fixed =T), paste(gsub('_', ' ', structure_type),'dense'), paste(gsub('_', ' ', structure_type),'sparse')))
   
-}
-
-showDistanceCurves <- function(df, structure, feature){
-  params <- retrieveParameters(df,structure,feature)
-  g1 <- ggplot() + 
-    stat_function(fun = dweibull, args = list(shape = params$shape,scale = params$scale), aes(colour=structure))  +
-    stat_function(fun = dweibull, args = list(shape = params$shape_alternative ,scale = params$scale_alternative), aes(colour='low'))  +
-  xlim(0,600) + theme_bw() + xlab('micron') + ylab('N') + ylim(0,0.1) + ggtitle(feature)
-    
-  b1 <- create_boxplot(df, structure,feature)
-  g_total <- g1 + inset_element(b1, 0.4, 0.2, 0.98, 0.98)
-  return(g_total)
-
+  b1 <- ggplot(na.omit(d)) + geom_boxplot(aes(x=group, y=shape,fill=group)) + theme_bw() + xlab('') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + xlim(paste(gsub('_', ' ', structure_type),'dense'),paste(gsub('_', ' ', structure_type),'sparse')) + theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),legend.position = "none")
+  b2 <- ggplot(na.omit(d)) + geom_boxplot(aes(x=group, y=scale,fill=group)) + theme_bw() + xlab('') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + xlim(paste(gsub('_', ' ', structure_type),'dense'),paste(gsub('_', ' ', structure_type),'sparse')) +  theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),legend.position = "none")
+  b3 <- ggplot(medians)  + geom_boxplot(aes(x=group, y=median_observations,fill=group)) + theme_bw() + ylab('median') + xlab('') + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) + xlim(paste(gsub('_', ' ', structure_type),'dense'),paste(gsub('_', ' ', structure_type),'sparse')) +  theme(axis.title.x=element_blank(),
+        axis.text.x=element_blank(),
+        axis.ticks.x=element_blank(),legend.position = "none")
+  
+  return(plot_grid(b1,b2,b3, nrow=1, rel_widths = c(1,1,1)))
   
 }
+
+showDistanceCurves <- function(df,medians, structure, feature){
+    params <- retrieveParameters(df,structure,feature)
+    g1 <- ggplot() + 
+      stat_function(fun = dweibull, args = list(shape = params$shape,scale = params$scale), aes(colour=paste(gsub('_', ' ', structure_type),'dense')))  +
+      stat_function(fun = dweibull, args = list(shape = params$shape_alternative ,scale = params$scale_alternative), aes(colour=paste(gsub('_', ' ', structure_type),'sparse')))  +
+    xlim(0,600) + theme_bw() + xlab('micron') + ylab('N') + ylim(0,0.1) + ggtitle(feature) + guides(colour=guide_legend(title="region"))
+      
+    b1 <- create_boxplot(df,medians, structure,feature)
+    g_total <- g1 + inset_element(b1, 0.2, 0.4, 0.98, 0.98)
+
+    return(g_total)
+
+}
+
+
 
 # Show examples for every subtype
 for (i in significant_distanceFeatures){
-    print(showDistanceCurves(allparameters_VS, 'Vascular stroma', i))
+  plot_grid(DensityPlot(densities,gsub('_', ' ',structure_type),gsub('+','plus',gsub('-','min',str_split(i,'_to_')[[1]][[1]], fixed=T),fixed=T)),
+          DensityPlot(densities,gsub('_', ' ',structure_type),gsub('+','plus',gsub('-','min',str_split(i,'_to_')[[1]][[2]],fixed=T),fixed=T)),
+          showDistanceCurves(allparameters_structure,medians_structure, gsub('_',' ',structure_type), i),
+          ncol=3, rel_widths = c(1,1,3))
+
+  ggsave(paste(here('output/region_analysis/result_'), structure_type, '/plot_',gsub('+','plus',i,fixed=T),'.pdf', sep=''),width=12,height=5)
+
 }
 
 ```
-
-
-
